--- a/style.css
+++ b/style.css
@@ -1,8 +1,40 @@
 * {
     box-sizing: border-box;
     margin: 0;
+    background-color: rgb(61, 58, 58);
+    color: aliceblue;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.title{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.title-logo{
+    font-size: 2em;
+    padding: 10px;
+    margin-bottom: 1em;
+}
+
+nav a{
+    text-decoration: none;
+    padding: 1em;
 }
 
 #banner-image{
     width: 100%;
+}
+
+section{
+    padding: 2em;
 }
