--- a/style.css
+++ b/style.css
@@ -130,3 +130,37 @@ section {
   .active::after {
     content: "\2796";
   }
+  /** Fin SERVICIOS */
+
+
+  /** CONTACTO */
+  input[type=text], input[type=email], select, textarea {
+    width: 100%;
+    padding: 1em;
+    color: var(--color4);
+    background-color: var(--color5);
+    border: 1px solid var(--color4);
+    border-radius: 0.5em;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+  }
+  
+  input[type=submit] {
+    background-color: var(--color2);
+    color: var(--color5);
+    padding: 12px 20px;
+    border-radius: 0.5em;
+    border: none;
+    cursor: pointer;
+  }
+  
+  input[type=submit]:hover {
+    background-color: var(--color1);
+  }
+  
+  .container {
+    border-radius: 5px;
+    padding: 20px;
+  }
+  /** Fin CONTACTO */
