--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@
 * {
   box-sizing: border-box;
   margin: 0;
-  background-color: var(--color4);
-  color: var(--color5);
+  /* background-color: var(--color4); */
+  /* color: var(--color5); */
   font-family: "Raleway", sans-serif;
 }
 
@@ -27,8 +27,15 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: var(--color4);
+  color: var(--color5);
 }
 
+section {
+  padding: 2em;
+  background-color: var(--color4);
+  color: var(--color5);
+}
 
 /** TITULO */
 .title {
@@ -49,7 +56,6 @@ header {
 }
 /** Fin TITULO  */
 
-
 /** NAVBAR */
 nav {
   margin: 1em 0;
@@ -59,15 +65,17 @@ nav a {
   text-decoration: none;
   margin: 1em;
   transition: color 0.4s;
+  color: var(--color5);
 }
 
-nav a:hover{
+nav a:hover {
   color: var(--color3);
   /* background-color: var(--color3); */
 }
 /** Fin NABVAR */
 
 
+/** RESPONSIVE */
 @media (max-width: 607px) {
   header {
     flex-direction: column;
@@ -76,6 +84,10 @@ nav a:hover{
   .title-logo {
     height: 3em;
     margin-right: 1em;
+  }
+
+  #banner {
+    flex-direction: column;
   }
 }
 
@@ -87,75 +99,110 @@ nav a:hover{
   .title {
     margin: 1em 1em;
   }
+
+  #banner {
+    flex-direction: row;
+  }
+
+  .banner-item {
+    width: 50%;
+  }
+
+}
+/** Fin RESPONSIVE */
+
+
+/** BANNER */
+#banner {
+  background-image: url(./images/legal2.webp);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  display: flex;
 }
 
-#banner-image {
-  width: 100%;
+.banner-item{
+  /* color: var(--color1); */
+  padding: 1em;
+  margin: 1em;
+  border-radius: 1em;
 }
-
-section {
-  padding: 2em;
-}
+/** Fin BANNER */
 
 /* * Servicios */
 .accordion {
-    cursor: pointer;
-    padding: 1em;
-    width: 12em;
-    text-align: left;
-    border: none;
-    outline: none;
-    transition: 0.4s;
-  }
-  
-  .panel {
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.6s ease-out;
-  }
+  background-color: var(--color4);
+  color: var(--color5);
+  cursor: pointer;
+  padding: 1em;
+  width: 100%;
+  text-align: left;
+  border: none;
+  outline: none;
+  transition: 0.4s;
+}
 
-  .accordion::after {
-    content: '\02795';
-    font-size: 1em;
-    float: right;
-    margin-left: 5px;
-  }
-  
-  .active::after {
-    content: "\2796";
-  }
-  /** Fin SERVICIOS */
+.panel {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.6s ease-out;
+  background-color: aliceblue;
+}
 
+.accordion::after {
+  content: "\02795";
+  font-size: 1em;
+  float: right;
+  margin-left: 5px;
+}
 
-  /** CONTACTO */
-  input[type=text], input[type=email], select, textarea {
-    width: 100%;
-    padding: 1em;
-    color: var(--color4);
-    background-color: var(--color5);
-    border: 1px solid var(--color4);
-    border-radius: 0.5em;
-    margin-top: 1em;
-    margin-bottom: 1em;
-    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
-  }
-  
-  input[type=submit] {
-    background-color: var(--color2);
-    color: var(--color5);
-    padding: 12px 20px;
-    border-radius: 0.5em;
-    border: none;
-    cursor: pointer;
-    transition: background-color 0.4s;
-  }
-  
-  input[type=submit]:hover {
-    background-color: var(--color1);
-  }
-  
-  .container {
-    border-radius: 5px;
-    padding: 20px;
-  }
-  /** Fin CONTACTO */
+.active::after {
+  content: "\2796";
+}
+/** Fin SERVICIOS */
+
+/** CONTACTO */
+
+#form-contacto {
+  background-color: rgba(204, 204, 204, 0.7);
+}
+
+#form-contacto label {
+  color: var(--color4);
+}
+
+input[type="text"],
+input[type="email"],
+select,
+textarea {
+  width: 100%;
+  padding: 1em;
+  color: var(--color4);
+  background-color: var(--color5);
+  border: 0px solid;
+  border-radius: 0.5em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+input[type="submit"] {
+  color: var(--color5);
+  background-color: var(--color2);
+  padding: 12px 20px;
+  border-radius: 0.5em;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.4s;
+}
+
+input[type="submit"]:hover {
+  background-color: var(--color1);
+}
+/** Fin CONTACTO */
+
+footer {
+  background-color: var(--color4);
+  color: var(--color5);
+}
