--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ input[type="submit"]:hover {
 .accordion {
   background-color: var(--color4);
   color: var(--color3);
-  font-size: large;
+  font-size: 1.5em;
   cursor: pointer;
   padding: 1em;
   width: 100%;
@@ -239,6 +239,7 @@ iframe{
 footer {
   background-color: var(--color4);
   color: var(--color5);
+  padding: 1em;
 }
 
 /** RESPONSIVE */
